<?xml version="1.0"?>
<package format="3">
  <name>talker_listener</name>
  <version>0.0.0</version>
  <description>My first ROS 2 package</description>
  <maintainer email="mahesh@todo.todo">Mahesh</maintainer>
  <license>Apache-2.0</license>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>